- phoromatic: Add "Run Test Schedule Now" button to test schedule page to allow for easy one-time/manual testing
- phoromatic: Add some basic statistics to the rootadmin page
- phoromatic: Allow the PhoromaticStorage location to be modified from the webUI when logging in as rootadmin
- phoromatic: Allow the download cache location to be modified from the webUI when logging in as rootadmin

Phoronix Test Suite 5.4 Milestone 5
10 November 2014

- pts-core: Improvements when running as a systemd service / daemon
- pts-core: Prefer firefox over Epiphany browser
- phoromatic: Implement email notifications on result uploads
- phoromatic: Implement email notifications on system generated errors/warnings
- phoromatic: Implement email notifications on new systems added
- phoromatic: Allow easily comparing a result file to other results for that given schedule ID
- phoromatic: Improve formatting of lists
- phoromatic: Add times viewed to results
- phoromatic: Add "show only results with variation" to result viewing page
- phoromatic: Add result flagging to the main page
- phoromatic: Allow other/unscheduled test results to be uploaded to the Phoromatic Server using the phoromatic.upload-result sub-command
- phoromatic: Show file/path locations when starting the Phoromatic Server
- phoromatic: Use a randomly chosen available port by default when starting the Phoromatic Server if no ports are defined
- phoromatic: Add basic root administrator support to the Phoronix web interface
- pts_Graph: Shrink size of sub-title text strings when they're too long

Phoronix Test Suite 5.4 Milestone 4
5 November 2014

- pts-core: Add 3840 x 2160 (4K UHD) to more of the mode-setting fall-back modes
- pts-core: Start working on support for using standard Linux file-system hierarchy when running as root as a service
- pts-core: Add PhoromaticStorage option to Phoronix Test Suite user configuration XML file
- phoromatic: Reporting of overall result counts for given test schedules