@@ -7,6 +7,8 @@ Phoronix Test Suite (Git)
 - phoromatic: Add some basic statistics to the rootadmin page
 - phoromatic: Allow the PhoromaticStorage location to be modified from the webUI when logging in as rootadmin
 - phoromatic: Allow the download cache location to be modified from the webUI when logging in as rootadmin
+- phoromatic: Allow the network proxy details to be modified from the webUI when logging in as rootadmin
+- phoromatic: Allow the HTTP / WebSocket ports to be modified from the webUI when logging in as rootadmin
 
 Phoronix Test Suite 5.4 Milestone 5
 10 November 2014
